# Repair-Requests-CRM

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
scripts/: seed_users.py
src/: main.py
src/auth/: dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
src/clients/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/core/: config.py  dependencies.py  exceptions.py  security.py
src/database/: events.py  session.py
src/middleware/: error_handler.py  logging.py
src/tickets/: exceptions.py  models.py  permissions.py  repository.py  router.py  schemas.py  service.py
src/users/: exceptions.py  models.py  permissions.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/auth/: test_router.py
tests/clients/: test_router.py  test_service.py
tests/tickets/: test_router.py
tests/users/: test_router.py
